// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingSpinner /> snapshot should match snapshot 1`] = `
<LoadingSpinner>
  <div
    className="md-loading-spinner-wrapper"
  >
    <Icon
      name="spinner"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
    <Icon
      className="md-loading-spinner-arch"
      name="spinner-in-progress"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-loading-spinner-arch md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner-in-progress"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</LoadingSpinner>
`;

exports[`<LoadingSpinner /> snapshot should match snapshot with className 1`] = `
<LoadingSpinner
  className="example-class"
>
  <div
    className="example-class md-loading-spinner-wrapper"
  >
    <Icon
      name="spinner"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
    <Icon
      className="md-loading-spinner-arch"
      name="spinner-in-progress"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-loading-spinner-arch md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner-in-progress"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</LoadingSpinner>
`;

exports[`<LoadingSpinner /> snapshot should match snapshot with id 1`] = `
<LoadingSpinner
  id="example-id"
>
  <div
    className="md-loading-spinner-wrapper"
    id="example-id"
  >
    <Icon
      name="spinner"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
    <Icon
      className="md-loading-spinner-arch"
      name="spinner-in-progress"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-loading-spinner-arch md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner-in-progress"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</LoadingSpinner>
`;

exports[`<LoadingSpinner /> snapshot should match snapshot with scale 1`] = `
<LoadingSpinner
  scale={32}
>
  <div
    className="md-loading-spinner-wrapper"
  >
    <Icon
      name="spinner"
      scale={32}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={32}
          data-test="spinner"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
    <Icon
      className="md-loading-spinner-arch"
      name="spinner-in-progress"
      scale={32}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-loading-spinner-arch md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={32}
          data-test="spinner-in-progress"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</LoadingSpinner>
`;

exports[`<LoadingSpinner /> snapshot should match snapshot with style 1`] = `
<LoadingSpinner
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-loading-spinner-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <Icon
      name="spinner"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
    <Icon
      className="md-loading-spinner-arch"
      name="spinner-in-progress"
      scale={24}
      weight="regular"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-loading-spinner-arch md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={24}
          data-test="spinner-in-progress"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</LoadingSpinner>
`;
